2007-03-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-02
	* call startSendDataWorkLoop() and startSendDqmWorkLoop() in
	enabling()
	* replace TimerListener interface with a WorkLoop for monitoring
	* change monitoring variables according to what is done in BU

2007-03-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-01
	* fix to the handling of discards from the SM
	* tested with EventFilter/ShmBuffer V00-03-01

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-00
	* based on EventFilter/ShmBuffer V00-03-00
	* based on EventFilter/Utilities V00-12-01
	* add SMProxy class to send (Event/DQM) data to the storage manager
	
2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* remove shmMode option: from now on, *only* FUShmReader is
	supported to consumer built events, the support of FUStdReader is
	stopped.
	* As a consequence, the FEDProvider interface is removed.
	* FUResourceTable::dropEvent() added.

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* remove shared memory relevant classes from package, are
	transfered to EventFilter/ShmBuffer (V00-00-01)

2007-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* fix to discard-workloop in FUResourceTable, cleanly handle
	shutdown of connected processors now.

2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* compliant with FWCore reorganization of 140 series
	* based on evf::StateMachine available from EventFilter/Utilities
	V00-12-00
	
	
2007-02-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-01
	* add rcmsStateNotifier from xdaq2rc package: used to notify run
	control of the self-triggered transition into the target state.

2007-02-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00